--- a/documentation/asciidoc/topics/proc_adding_cache_auth_secrets.adoc
+++ b/documentation/asciidoc/topics/proc_adding_cache_auth_secrets.adoc
@@ -1,5 +1,5 @@
 [id='cache_auth-{context}']
-= Adding Credentials Secrets for Cache Creation
+= Adding Credentials to Create Caches
 {ispn_operator} must authenticate with {datagridservice} clusters to create
 caches. You add credentials to a secret so that {ispn_operator} can access your
 cluster when creating caches.
@@ -13,7 +13,7 @@ creating a new one.
 . Define a **Secret** object type that provides valid user credentials for
 accessing {datagridservice} clusters in a `StringData` map.
 +
-For example, create an `auth_secret.yaml` file that provides credentials for
+For example, create an `basic-auth.yaml` file that provides credentials for
 the `developer` user as follows:
 +
 [source,options="nowrap",subs=attributes+]
@@ -36,5 +36,5 @@ type: Opaque
 +
 [source,options="nowrap",subs=attributes+]
 ----
-$ {oc_create} secret generic --from-file=auth_secret.yaml basic-auth
+$ {oc_apply_cr} basic-auth.yaml
 ----
