--- a/documentation/asciidoc/topics/proc_creating_caches_xml.adoc
+++ b/documentation/asciidoc/topics/proc_creating_caches_xml.adoc
@@ -24,13 +24,13 @@ spec:
     secretName: basic-auth
   clusterName: {example_crd_name} <3>
   name: mycache <4>
-  template: <infinispan><cache-container><distributed-cache/></cache-container></infinispan> <5>
+  template: <infinispan><cache-container><distributed-cache name="mycache" mode="SYNC"><persistence><file-store/></persistence></distributed-cache></cache-container></infinispan> <5>
 ----
 +
 <1> Names the **Cache** CR.
 <2> Specifies a secret that provides credentials with `username` and `password` keys or an override for custom credentials secrets.
 <3> Specifies the name of the target {brandname} cluster where you want {ispn_operator} to create the cache.
-<4> Names the {brandname} cache instance.
+<4> Names the cache on the {brandname} cluster.
 <5> Specifies the XML cache definition to create the cache. Note that the `name` attribute is ignored. Only `spec.name` applies to the resulting cache.
 +
 . Apply the **Cache** CR, for example:
