--- a/documentation/asciidoc/topics/proc_exposing_loadbalancer.adoc
+++ b/documentation/asciidoc/topics/proc_exposing_loadbalancer.adoc
@@ -32,6 +32,6 @@ spec:
 ----
 $ {oc_get_services} | grep external
 
-NAME                         TYPE            CLUSTER-IP       EXTERNAL-IP   PORT(S)
-{example_crd_name}-external  LoadBalancer    192.0.2.24       <none>        11222/TCP
+NAME                         TYPE            CLUSTER-IP    EXTERNAL-IP   PORT(S)
+{example_crd_name}-external  LoadBalancer    192.0.2.24    hostname.com  11222/TCP
 ----
