--- a/documentation/asciidoc/topics/ref_cacheservice_resources.adoc
+++ b/documentation/asciidoc/topics/ref_cacheservice_resources.adoc
@@ -11,7 +11,7 @@ spec:
   replicas: 4 <2>
   service:
     type: Cache <3>
-    replicationFactor: <4>
+    replicationFactor: 2 <4>
   autoscale: <5>
     maxMemUsagePercent: 70
     maxReplicas: 5
@@ -36,7 +36,7 @@ spec:
 
 <1> Names the {brandname} cluster.
 <2> Specifies the number of nodes in the cluster.
-<3> Creates {cacheservice} clusters.
+<3> Creates {cacheservice} clusters. This is the default for Infinispan CR.
 <4> Configures the number of replicas for each cache entry across the cluster.
 <5> Enables and configures automatic cluster scaling.
 <6> Adds an authentication secret with user credentials.
