--- a/documentation/asciidoc/topics/proc_exposing_route.adoc
+++ b/documentation/asciidoc/topics/proc_exposing_route.adoc
@@ -15,7 +15,7 @@ endif::productized[]
 
 . Include `spec.expose` in your **Infinispan** CR.
 . Specify `Route` as the service type with `spec.expose.type`.
-. Specify a hostname with `spec.expose.host`.
+. Optionally add a hostname with `spec.expose.host`.
 +
 [source,options="nowrap",subs=attributes+]
 ----
@@ -34,7 +34,7 @@ endif::productized[]
 ifdef::productized[]
 <1> Exposes {brandname} on the network through an {openshiftshort} Route.
 endif::productized[]
-<2> Specifies the hostname where {brandname} is exposed.
+<2> Optionally specifies the hostname where {brandname} is exposed.
 +
 . Apply the changes.
 . Verify that the  is available.
