--- a/documentation/asciidoc/topics/ref_xsite_crd.adoc
+++ b/documentation/asciidoc/topics/ref_xsite_crd.adoc
@@ -26,6 +26,9 @@ ifndef::productized[]
 This secret contains different authentication objects, depending on your
 Kubernetes environment.
 ====
++
+<8> Logs error messages for the JGroups TCP protocol.
+<9> Logs fatal messages for the JGroups RELAY2 protocol.
 endif::productized[]
 
 //Product
@@ -35,6 +38,8 @@ ifdef::productized[]
 <3> Specifies `LoadBalancer` as the service that handles communication between backup locations.
 <4> Provides connection information for all backup locations.
 <5> Specifies a backup location that matches `.spec.service.sites.local.name`.
-<6> Specifies the URL of the Kubernetes API for the backup location.
+<6> Specifies the URL of the {openshiftshort} API for the backup location.
 <7> Specifies the secret that contains the service account token for the backup site.
+<8> Logs error messages for the JGroups TCP protocol.
+<9> Logs fatal messages for the JGroups RELAY2 protocol.
 endif::productized[]
