Upgrade to Infinispan 12.x

--- a/doc/design.adoc
+++ b/doc/design.adoc
@@ -55,7 +55,7 @@ is gracefully shut down.
 | Operator image
 | string
 | false
-| `infinispan/server:latest`
+| `infinispan/server:12.0`
 | v1
 
 | `profile`
@@ -707,7 +707,7 @@ kind: Infinispan
 metadata:
   name: full-cache-example-infinispan
 spec:
-  image: infinispan/server:latest
+  image: infinispan/server:12.0
   replicas: 4
   profile: Development
   service:
@@ -796,7 +796,7 @@ kind: Infinispan
 metadata:
   name: full-datagrid-example-infinispan
 spec:
-  image: infinispan/server:latest
+  image: infinispan/server:12.0
   replicas: 6
   profile: Performance
   service:
